# Manim-VidGen-BackEnd

./: .gitignore  README.md  docLoader.py  main.py  manim_docs.json  manim_docs.md  pyproject.toml  rag_retriever.py  scrapeManim.py  scraped_output.json  video.py  wget-log
media/Tex/: 00c43dba061209c2.tex  015c35f98f11d594.tex  022318718f1a809a.tex  0376037d7e717de6.tex  037964950d888643.tex  05ced7cedf442587.tex  071dde918967a7a0.tex  073b740dc4ca8846.tex  0747dc2be6179949.tex  07a3d2ab236da50f.tex  07ad3c50fceb6a0d.tex  08955fec2d084575.tex  0b86382f606e4d52.tex  0bd46df45d9ee9d6.tex  0c4b457504eba480.tex  0d1e81ea98ec7d72.tex  0e0f037bfdfac631.tex  0f3b25d7b7ad6120.tex  0f4ca650859db494.tex  10f899f71fbceb30.tex  12492e0c3f5b6f46.tex  143e5e328950dd73.tex  1541623e0516cbcc.tex  158983bc42ba1af3.tex  175f9a40e26c9a38.tex  17886b461f87a87b.tex  1a2fff1462576de1.tex  1a6a28c40be63d13.tex  1b5c35be4e391a16.tex  1cfa8d4e13abf762.tex  1d2f461181edc157.tex  1d305082b5cae02d.tex  1ee5d417c08922bb.tex  1ee65f5dbe9ea5e2.tex  20c5a5ef09fc935e.tex  20ec81e74d3be14f.tex  21206bd12e379d20.tex  219422fee17f7139.tex  228a53edad32675f.tex  231048c0f8468b6c.tex  (+230 more)
media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
