[project]
name = "manimations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.0",
    "fastapi",
    "uvicorn[standard]",
    "google-api-python-client",
    "groq",
    "python-dotenv",
    "langchain[google-genai]>=1.2.13",
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.8.0",
    "google-genai>=1.68.0",
    "langchain-google-genai>=4.2.2",
    "voyageai>=0.3.7",
    "langchain-core>=1.4.0",
]
